--- a/HotelGarage/packages.config
+++ b/HotelGarage/packages.config
@@ -42,6 +42,7 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
   <package id="NUnit" version="3.11.0" targetFramework="net471" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net471" />
+  <package id="OpenCover" version="4.7.922" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net471" />
   <package id="popper.js" version="1.14.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
