--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -327,8 +327,10 @@
     <Compile Include="Models\Reservation.cs" />
     <Compile Include="Models\StateOfPlace.cs" />
     <Compile Include="Models\StateOfReservation.cs" />
+    <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CarRepository.cs" />
+    <Compile Include="Repositories\IReservationRepository.cs" />
     <Compile Include="Repositories\ParkingPlaceRepository.cs" />
     <Compile Include="Repositories\ReservationRepository.cs" />
     <Compile Include="Repositories\StateOfPlaceRepository.cs" />
