--- a/HotelGarage/packages.config
+++ b/HotelGarage/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net471" />
   <package id="bootstrap" version="4.1.3" targetFramework="net471" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="jQuery" version="3.3.1" targetFramework="net471" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net471" />
@@ -40,11 +41,19 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net471" />
+  <package id="Ninject.Extensions.Conventions" version="3.2.0.0" targetFramework="net471" />
+  <package id="Ninject.Extensions.Factory" version="3.2.0.0" targetFramework="net471" />
+  <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net471" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net471" />
+  <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net471" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net471" />
   <package id="NUnit" version="3.11.0" targetFramework="net471" />
   <package id="NUnit3TestAdapter" version="3.11.0" targetFramework="net471" />
   <package id="OpenCover" version="4.7.922" targetFramework="net471" />
   <package id="Owin" version="1.0" targetFramework="net471" />
   <package id="popper.js" version="1.14.0" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
 </packages>
