--- a/HotelGarage/Web.config
+++ b/HotelGarage/Web.config
@@ -18,6 +18,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors defaultRedirect="Error.cshtml"
+                  mode="RemoteOnly">
+      <error statusCode="500"
+             redirect="Error.cshtml"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
