--- a/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
+++ b/HotelGarage.UnitTests/HotelGarage.UnitTests.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\ParkingControllerTests.cs" />
+    <Compile Include="Controllers\ReservationsControllerTests.cs" />
     <Compile Include="Extensions\ParkingControllerExtensions.cs" />
     <Compile Include="Models\CarTests.cs" />
     <Compile Include="Models\ParkingPlaceTests.cs" />
