--- a/HotelGarage/Web.config
+++ b/HotelGarage/Web.config
@@ -18,10 +18,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors defaultRedirect="Error.cshtml"
-                  mode="RemoteOnly">
-      <error statusCode="500"
-             redirect="Error.cshtml"/>
+    <customErrors defaultRedirect="Error.cshtml" mode="RemoteOnly">
+      <error statusCode="500" redirect="Error.cshtml" />
     </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.1" />
