--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -385,7 +385,7 @@
     <Content Include="Content\dataTables.material.min.css" />
     <Content Include="Content\material.min.css" />
     <Content Include="Scripts\bootbox.min.js" />
-    <Content Include="Scripts\bootstrap.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\dataTables.bootstrap4.min.js" />
     <Content Include="Scripts\dataTables.material.min.js" />
     <Content Include="Scripts\jquery.dataTables.min.js" />
@@ -396,10 +396,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\site.less" />
-    <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\app\range_dates.js" />
+    <Content Include="Scripts\modernizr-2.8.3.min.js" />
     <Content Include="Scripts\typeahead.bundle.min.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
