--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -256,12 +256,12 @@
     <Compile Include="Controllers\ParkingController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ReservationController.cs" />
-    <Compile Include="Core\Dtos\BootBoxDataDto.cs" />
-    <Compile Include="Core\Models\ApplicationUser.cs" />
+    <Compile Include="Core\Dto\BootBoxDataDto.cs" />
+    <Compile Include="Core\Model\ApplicationUser.cs" />
     <Compile Include="Persistence\ApplicationDbContext.cs" />
-    <Compile Include="Core\Dtos\ReservationDto.cs" />
-    <Compile Include="Core\Dtos\ParkingPlaceDto.cs" />
-    <Compile Include="Core\Dtos\ReservationListDto.cs" />
+    <Compile Include="Core\Dto\ReservationDto.cs" />
+    <Compile Include="Core\Dto\ParkingPlaceDto.cs" />
+    <Compile Include="Core\Dto\ReservationListDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -360,25 +360,25 @@
       <DependentUpon>202003272355367_addEnumPt3.cs</DependentUpon>
     </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
-    <Compile Include="Core\ViewModels\AccountViewModels.cs" />
-    <Compile Include="Core\Models\Car.cs" />
-    <Compile Include="Core\ViewModels\ManageViewModels.cs" />
-    <Compile Include="Core\Models\OccupancyNumbersOfTheDay.cs" />
-    <Compile Include="Core\Models\ParkingPlace.cs" />
-    <Compile Include="Core\Models\Reservation.cs" />
-    <Compile Include="Core\Models\ParkingPlaceState.cs" />
-    <Compile Include="Core\Models\ReservationState.cs" />
+    <Compile Include="Core\ViewModel\AccountViewModels.cs" />
+    <Compile Include="Core\Model\Car.cs" />
+    <Compile Include="Core\ViewModel\ManageViewModels.cs" />
+    <Compile Include="Core\Model\OccupancyNumbersOfTheDay.cs" />
+    <Compile Include="Core\Model\ParkingPlace.cs" />
+    <Compile Include="Core\Model\Reservation.cs" />
+    <Compile Include="Core\Model\ParkingPlaceState.cs" />
+    <Compile Include="Core\Model\ReservationState.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Persistence\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Persistence\Repositories\CarRepository.cs" />
-    <Compile Include="Core\Repositories\ICarRepository.cs" />
-    <Compile Include="Core\Repositories\IParkingPlaceRepository.cs" />
-    <Compile Include="Core\Repositories\IReservationRepository.cs" />
+    <Compile Include="Core\Repository\ICarRepository.cs" />
+    <Compile Include="Core\Repository\IParkingPlaceRepository.cs" />
+    <Compile Include="Core\Repository\IReservationRepository.cs" />
     <Compile Include="Persistence\Repositories\ParkingPlaceRepository.cs" />
     <Compile Include="Persistence\Repositories\ReservationRepository.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Core\ViewModels\ParkingViewModel.cs" />
+    <Compile Include="Core\ViewModel\ParkingViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css" />
