--- a/HotelGarage/HotelGarage.csproj
+++ b/HotelGarage/HotelGarage.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Controllers\ReservationController.cs" />
     <Compile Include="Core\Dto\BootBoxDataDto.cs" />
     <Compile Include="Core\Model\ApplicationUser.cs" />
+    <Compile Include="Core\Model\ParkingPlaceType.cs" />
     <Compile Include="Persistence\ApplicationDbContext.cs" />
     <Compile Include="Core\Dto\ReservationDto.cs" />
     <Compile Include="Core\Dto\ParkingPlaceDto.cs" />
@@ -358,6 +359,10 @@
     <Compile Include="Persistence\Migrations\202003272355367_addEnumPt3.cs" />
     <Compile Include="Persistence\Migrations\202003272355367_addEnumPt3.Designer.cs">
       <DependentUpon>202003272355367_addEnumPt3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistence\Migrations\202003301024455_parkingPlaceType.cs" />
+    <Compile Include="Persistence\Migrations\202003301024455_parkingPlaceType.Designer.cs">
+      <DependentUpon>202003301024455_parkingPlaceType.cs</DependentUpon>
     </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Core\ViewModel\AccountViewModels.cs" />
@@ -515,6 +520,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\202003272355367_addEnumPt3.resx">
       <DependentUpon>202003272355367_addEnumPt3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\202003301024455_parkingPlaceType.resx">
+      <DependentUpon>202003301024455_parkingPlaceType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
